--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -31,7 +31,7 @@ services:
     container_name: orderdb
     environment:
         SA_PASSWORD: "SwN12345678"
-        ACCEPT_EULA: 'Y'
+        ACCEPT_EULA: "Y"
     restart: always
     ports:
         - "1434:1433"
@@ -98,3 +98,14 @@ services:
       - discountdb
     ports:
       - "8003:80"
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+    depends_on:
+      - orderdb
+    ports:
+      - "8004:80"
+
